devel
-----

* Added option to exclude system collection from rebalance shards plan.

* Updated arangosync to v2.13.0-preview-4.

* Delay a MoveShard operation for leader change, until the old leader has
  actually assumed its leadership and until the new leader is actually in
  sync. This fixes a bug which could block a shard under certain circumstances.
  This fixes BTS-1110.

* Fixed issue #17367: FILTER fails when using negation (!) on variable whose
  name starts with "in". Add trailing context to NOT IN token.

* Do not query vertex data in K_PATHS queries if vertex data is not needed.

* Removed assertions from cluster rebalance js test that obligated the rebalance
  plan to always have moves, but there were cases in which all there are none.

* Show number of HTTP requests in cluster query profiles.

* Improved the syntax highlighter for AQL queries in the web interface
  with support for multi-line strings, multi-line identifiers in forward
  and backticks, colorization of escape sequences, separate tokens for
  pseudo-keywords and pseudo-variables, an updated regex for numbers, the
  addition of the AT LEAST and WITH COUNT INTO constructs, and the
  SHA256() function.

* Enable "collect-in-cluster" optimizer rule for SmartGraph edge collections.

* Improve performance and memory usage of IN list lookups for hash, skiplist
  and persistent indexes.

* Improve memory usage tracking for IN list lookups and other RocksDB-based
  lookups.

* Remove inactive query plan cache code (was only a stub and never enabled 
  before).

* Fixed BTS-441: Honor read only mode with disabled authentication

* Obsolete startup option `--database.force-sync-properties`. This option
  was useful with the MMFiles storage engine, but didn't have any useful
  effect when used with the RocksDB engine.

* Updated OpenSSL to 1.1.1s.

* BTS_483: Added restriction for usage of query cache for streaming and JS 
  transactions when they are not read-only.
