@@ -1,6 +1,9 @@
 devel
 -----
 
+* Fix setting query memory limit to 0 for certain queries if a global memory
+  limit is set, but overriding the memory limit is allowed.
+
 * Added option to exclude system collection from rebalance shards plan.
 
 * Updated arangosync to v2.13.0-preview-4.
